--- a/Actividad_Practicas/appsettings.Development.json
+++ b/Actividad_Practicas/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+
+  "ConnectionStrings": {
+     "Postgres": "Host=db;Port=5432;Database=Trabajo_Practica;Username=postgres;Password=postgres;Include Error Detail=true",
+     "PostgresLocal": "Host=localhost;Port=5432;Database=Trabajo_Practica;Username=postgres;Password=1234;Include Error Detail=true"
   }
 }
